It seems the cover attachment set by TagLib is systematically discarded by InputUpdateMeta().
I do not have the courage to bisect, but I strongly suspect that this change is the culprit:
commit e4673369e8356c84ca99b66fb222dee07c8e4962Author: Timothy B. Terriberry <tterribe@xiph.org>Date: Wed Apr 24 21:50:42 2013 -0700 Update attachments when updating metadata. This makes album art work for formats like Vorbis and Opus which do not have metadata available immediately after Open(). Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
input: fetch demux attachment once, not twice (fixes [#11966](https://code.videolan.org/videolan/vlc/-/issues/11966))This was inefficient and caused attachments from the meta engine or fromthe slave demuxers to get lost.Note that those attachments will still get lost later if the masterdemuxer sets the metadata update flag (which affects the Ogg demuxeronly so far), or when adding a slave input.All regressions introduced in e4673369e8356c84ca99b66fb222dee07c8e4962.