input: fetch demux attachment once, not twice (fixes #11966)

This was inefficient and caused attachments from the meta engine or from
the slave demuxers to get lost.

Note that those attachments will still get lost later if the master
demuxer sets the metadata update flag (which affects the Ogg demuxer
only so far), or when adding a slave input.

All regressions introduced in e4673369e8356c84ca99b66fb222dee07c8e4962.

(cherry picked from commit fdb9f79e5ffdb566a1b5f5940d83f8cd93f08783)

Conflicts:
	src/input/input.c